--- a/packages/fitter/src/style/themes/dark.css
+++ b/packages/fitter/src/style/themes/dark.css
@@ -8,6 +8,7 @@
   --main-text-color: #fff;
   --main-cta-color: rgb(20, 115, 230);
   --main-cta-color--darker: rgb(13, 102, 208);
+  --main-cta-text-color: rgb(255, 255, 255);
   --main-text-color--darker: rgb(227, 227, 227);
   --secondary-text-color: rgb(185, 185, 185);
   --cta-text-color: rgb(255, 181, 91);
